<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/bleeding_cowboy"
        android:text="@string/lab_main_tytul"
        android:textAlignment="center"
        android:textSize="65sp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/caslon_antique"
        android:text="@string/lab_kontynuuj"
        android:textColor="@color/colorBialy"
        android:textSize="20sp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/caslon_antique"
        android:text="@string/lab_new_game"
        android:textColor="@color/colorBialy"
        android:textSize="20sp" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/caslon_antique"
        android:text="@string/lab_kampanie"
        android:textColor="@color/colorBialy"
        android:textSize="20sp"
        android:id="@+id/party_button"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/caslon_antique"
        android:text="@string/lab_pomoc"
        android:textColor="@color/colorBialy"
        android:textSize="20sp" />
</LinearLayout>