<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/creator_input_a"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_zyw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_s"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_wt"
        app:layout_constraintStart_toStartOf="@+id/creator_input_s" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/lab_wt"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_wt"
        app:layout_constraintStart_toStartOf="@+id/creator_input_wt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_a"
        app:layout_constraintBottom_toTopOf="@+id/creator_input_a"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_a"
        app:layout_constraintStart_toStartOf="@+id/creator_input_a" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/lab_zyw"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_s"
        app:layout_constraintStart_toEndOf="@+id/creator_input_a" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/lab_cechy_second"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/creator_input_wt"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/creator_input_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/creator_input_s" />

    <EditText
        android:id="@+id/creator_input_s"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/creator_input_zyw"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_wt"
        app:layout_constraintStart_toEndOf="@+id/creator_input_zyw" />

    <EditText
        android:id="@+id/creator_input_zyw"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/creator_input_a"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_s"
        app:layout_constraintStart_toEndOf="@+id/creator_input_a" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_sz"
        app:layout_constraintBottom_toTopOf="@+id/creator_input_sz"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_sz"
        app:layout_constraintStart_toStartOf="@+id/creator_input_sz" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_mag"
        app:layout_constraintBottom_toTopOf="@+id/creator_input_mag"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_mag"
        app:layout_constraintStart_toEndOf="@+id/creator_input_sz" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_po"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/creator_input_po"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_po"
        app:layout_constraintStart_toStartOf="@+id/creator_input_po" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab_pp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/creator_input_pp"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_pp"
        app:layout_constraintStart_toEndOf="@+id/creator_input_po" />

    <EditText
        android:id="@+id/creator_input_sz"
        android:layout_width="83dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_mag"
        app:layout_constraintStart_toStartOf="@+id/creator_input_a"
        app:layout_constraintTop_toBottomOf="@+id/creator_input_a" />

    <EditText
        android:id="@+id/creator_input_mag"
        android:layout_width="83dp"
        android:layout_height="0dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/creator_input_sz"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_po"
        app:layout_constraintStart_toEndOf="@+id/creator_input_sz" />

    <EditText
        android:id="@+id/creator_input_po"
        android:layout_width="83dp"
        android:layout_height="0dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/creator_input_mag"
        app:layout_constraintEnd_toStartOf="@+id/creator_input_pp"
        app:layout_constraintStart_toEndOf="@+id/creator_input_mag" />

    <EditText
        android:id="@+id/creator_input_pp"
        android:layout_width="83dp"
        android:layout_height="0dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/creator_input_po"
        app:layout_constraintEnd_toEndOf="@+id/creator_input_wt"
        app:layout_constraintStart_toEndOf="@+id/creator_input_po" />

</androidx.constraintlayout.widget.ConstraintLayout>